--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -9,3 +9,23 @@
   font-weight: 600;
   border-bottom: 2px solid #007bff;
 }
+.list {
+  display: flex;
+  list-style: none;
+  gap: 24px;
+}
+.header {
+  position: relative;
+  margin-bottom: 16px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Основна тінь хедера */
+}
+.header::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Товщина підкреслення */
+  background-color: #abadb1; /* Колір лінії */
+  box-shadow: 0 12px 16px rgba(15, 4, 4, 0.3); /* Тінь під лінією */
+}
